--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@heroicons/react": "^1.0.5",
+    "@graphcms/rich-text-react-renderer": "^0.4.2",
     "graphql": "^16.3.0",
-    "graphql-request": "^4.0.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-simple-maps": "^2.3.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
