--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@graphcms/rich-text-react-renderer": "^0.4.2",
     "graphql": "^16.3.0",
     "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
