--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@apollo/client": "^3.5.8",
     "@graphcms/rich-text-react-renderer": "^0.4.2",
     "graphql": "^16.3.0",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
