--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.8",
+    "@apollo/client": "^3.5.10",
     "@graphcms/rich-text-react-renderer": "^0.4.2",
     "graphql": "^16.3.0",
     "next": "^12.1.0",
@@ -16,11 +16,12 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18"
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
